--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
       </div>
     </nav>
   </header>
+<!-- Hero or Showcase Section -->
+<section class="hero d-flex flex-column align-items-center justify-content-center">
+    <div class="text-center">
+      <h1 class="h1 text-white fw-medium fst-italic">Georgina Kabasa</h1>
+      <h2 class="display-3 text-white fw-bold">Information & Computer Systems <br /> student</h2>
+      <a href="#skills" class="btn btn-lg fs-6 fw-medium mt-5 btn-primary p-3">TELL ME MORE</a>
+    </div>
+  </section>
 
 </body>
 </html>
