--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
       <div class="card mt-5 d-flex flex-column align-items-center text-center bg-white p-4" style="width: 25rem">
         <i class="text-white bg-primary d-flex align-items-center justify-content-center fs-2 rounded-circle fa-solid fa-cart-shopping"></i>
         <h3 class="mt-4 h4">Front-end Development</h3>
-        <p class="text-center">Proficient in HTML, CSS, and JavaScript. Experienced in responsive web design, building user-friendly interfaces, and using modern frameworks like ReactJS.</p>
+        <p class="text-center">Proficient in HTML, CSS, JavaScript and python. Experienced in responsive web design, building user-friendly interfaces, and using modern frameworks like ReactJS.</p>
       </div>
       <div class="card mt-5 d-flex flex-column align-items-center text-center bg-white p-4" style="width: 25rem">
         <i class="text-white bg-primary d-flex align-items-center justify-content-center fs-2 rounded-circle fa-solid fa-laptop"></i>
         <h3 class="mt-4 h4">Back-end Development</h3>
-        <p class="text-center">Skilled in server-side programming using technologies like Node.js and Express. Experience working with databases such as MongoDB and MySQL.</p>
+        <p class="text-center">Skilled in server-side programming using technologies like Node.js and Express. I have experience working with databases such as MongoDB and MySQL.</p>
       </div>
       <div class="card mt-5 d-flex flex-column align-items-center text-center bg-white p-4" style="width: 25rem">
         <i class="text-white bg-primary d-flex align-items-center justify-content-center fs-2 rounded-circle fa-solid fa-mobile-screen-button"></i>
