--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="card mt-5 d-flex flex-column align-items-center text-center bg-white p-4" style="width: 25rem">
         <i class="text-white bg-primary d-flex align-items-center justify-content-center fs-2 rounded-circle fa-solid fa-mobile-screen-button"></i>
         <h3 class="mt-4 h4">Mobile App Development</h3>
-        <p class="text-center">Proficient in developing mobile apps for iOS and Android using frameworks like React Native. Experienced in building engaging and intuitive mobile user interfaces.</p>
+        <p class="text-center">Proficient in developing mobile apps for iOS and Android using frameworks like React Native,Flutter,Ionic and Unity. Experienced in building engaging and intuitive mobile user interfaces.</p>
       </div>
     </div>
   </section>
