add about image 1.jpg

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <p>From an early age, I became fascinated with computers and programming. Starting with basic HTML and CSS, I gradually expanded my skills to include JavaScript and various frameworks.</p>
       </div>
       <div class="col-3 col-md-2 img text-center">
-        <img class="rounded-circle border border-5 border-dark-subtle img-fluid" src="images/about-img-1.jpg" alt="img">
+        <img class="rounded-circle border border-5 border-dark-subtle img-fluid" src="about image 1.jpg" alt="img">
       </div>
     </div>
     <div class="row justify-content-md-end mt-5 pt-5">
