--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <a class="nav-link" href="#skills">SKILLS</a>
             </li>
             <li class="nav-item mx-2">
-              <a class="nav-link" href="#portfolio">PORTFOLIO</a>
+              <a class="nav-link" href="#portfolio">PROJECTS</a>
             </li>
             <li class="nav-item mx-2">
               <a class="nav-link" href="#about">ABOUT</a>
@@ -95,7 +95,7 @@
     </div>
     <div class="row justify-content-md-end mt-5 pt-5">
       <div class="col-3 col-md-2 img text-center">
-        <img class="rounded-circle border border-5 border-dark-subtle img-fluid" src="images/about-img-2.jpg" alt="img">
+        <img class="rounded-circle border border-5 border-dark-subtle img-fluid" src="" alt="img">
       </div>
       <div class="col-9 col-md-5">
         <h5>2008-2014</h5>
@@ -121,13 +121,7 @@
         <h5>Future</h5>
         <h5>Continuing to Make a Difference</h5>
         <p>I am committed to leveraging my skills and expertise to contribute to meaningful projects that have a positive impact on society. I am eager to take on new challenges and collaborate with talented individuals to create innovative solutions.</p>
-      </div>
-    </div>
-    <div class="row justify-content-md-center mt-5 pt-5">
-      <div class="col-3 col-md-2 d-flex justify-content-center hire-text">
-        <h2 class="h4 d-flex justify-content-center align-items-center bg-primary text-white rounded-circle border border-5 border-dark-subtle"><span class="d-none d-md-block">Your<br>Next<br>Hire</span></h2>
-      </div>
-    </div>      
+      </div>        
   </section>
 
 </body>
