--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </div>
     <div class="row justify-content-md-end mt-5 pt-5">
       <div class="col-3 col-md-2 img text-center">
-        <img class="rounded-circle border border-5 border-dark-subtle img-fluid" src="" alt="img">
+        <img class="rounded-circle border border-5 border-dark-subtle img-fluid" src="about image 2.jpg" alt="img">
       </div>
       <div class="col-9 col-md-5">
         <h5>2008-2014</h5>
