add hobbies section

--- a/index.html
+++ b/index.html
@@ -124,5 +124,87 @@
       </div>        
   </section>
 
+  <!-- Hobbies Section -->
+  <section class="container py-5" id="cv">
+    <div class="row mt-4 py-3">
+      <div class="col-12 d-flex flex-column text-center">
+        <h2>CURRICULUM VITAE</h2>
+        <h5 class="text-secondary fw-normal py-2 fst-italic">A small sampling of some of the projects I've worked on as a student of the ICS program.</h5>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 mt-5 order-lg-0 order-1 text-center">
+        <img class="img-fluid rounded-circle border border-5 border-dark-subtle" src="images/profile-img.jpg" alt="profile-img">
+        <h2 class="mt-3">James Anderson</h2>
+        <ul class="list-unstyled contact-info">
+          <li><i class="fas fa-envelope me-2"></i> your.email@example.com</li>
+          <li><i class="fas fa-phone me-2"></i> (123) 456-7890</li>
+          <li><i class="fas fa-map-marker-alt me-2"></i> Your Address</li>
+        </ul>
+        <ul class="social-icons my-5 d-flex justify-content-center">
+          <a href="#" class="bg-primary mx-2 text-white d-flex align-items-center justify-content-center text-decoration-none rounded-circle"><i class="fa-brands fa-twitter"></i></a>
+          <a href="#" class="bg-primary mx-2 text-white d-flex align-items-center justify-content-center text-decoration-none rounded-circle"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="#" class="bg-primary mx-2 text-white d-flex align-items-center justify-content-center text-decoration-none rounded-circle"><i class="fa-brands fa-linkedin-in"></i></a>
+        </ul>
+        <h5>Technical Skills</h5>
+        <ul class="list-unstyled">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <!-- Add or remove skills as needed -->
+        </ul>
+        <h5>Personal Interests</h5>
+        <ul class="list-unstyled">
+          <li>Interest 1</li>
+          <li>Interest 2</li>
+          <li>Interest 3</li>
+          <!-- Add or remove interests as needed -->
+        </ul>
+      </div>
+      <div class="col-lg-7 order-lg-1 order-0 mt-5 text-start">
+        <h3>Profile</h3>
+        <hr>
+        <p>Write a brief description of yourself, your background, and your goals. Highlight your key strengths and experiences.</p>
+        <h3>Highlights of Qualifications</h3>
+        <hr>
+        <ul>
+          <li>Qualification 1</li>
+          <li>Qualification 2</li>
+          <li>Qualification 3</li>
+          <!-- Add or remove qualifications as needed -->
+        </ul>
+        <h3>Education</h3>
+        <hr>
+        <dl>
+          <dt>Year - Year</dt>
+          <dd>University/Institution</dd>
+          <dd>Degree/Program</dd>
+        </dl>
+        <h3>Additional Courses & Training</h3>
+        <hr>
+        <dl>
+          <dt>Year</dt>
+          <dd>Course/Training</dd>
+          <dd>Institution/Organization</dd>
+        </dl>
+        <h3>Work Experience</h3>
+        <hr>
+        <dl>
+          <dt>Year - Year</dt>
+          <dd>Job Position</dd>
+          <dd>Company/Organization</dd>
+          <!-- Add or remove work experience entries as needed -->
+        </dl>
+        <h3>Extracurricular Activities</h3>
+        <hr>
+        <dl>
+          <dt>Organization Name</dt>
+          <dd>Role/Position</dd>
+          <dd>Details of your involvement and contributions</dd>
+        </dl>
+      </div>
+    </div>      
+  </section>
+
 </body>
 </html>
