add design changes to social icons

--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
           <li><i class="fas fa-map-marker-alt me-2"></i> Your Address</li>
         </ul>
         <ul class="social-icons my-5 d-flex justify-content-center">
-          <a href="#" class="bg-primary mx-2 text-white d-flex align-items-center justify-content-center text-decoration-none rounded-circle"><i class="fa-brands fa-twitter"></i></a>
-          <a href="#" class="bg-primary mx-2 text-white d-flex align-items-center justify-content-center text-decoration-none rounded-circle"><i class="fa-brands fa-facebook-f"></i></a>
-          <a href="#" class="bg-primary mx-2 text-white d-flex align-items-center justify-content-center text-decoration-none rounded-circle"><i class="fa-brands fa-linkedin-in"></i></a>
+          <a href="#" class="bg-black mx-2 text-whites d-flex align-items-center justify-content-center text-decoration-none rounded-circle"><i class="fa-brands fa-twitter"></i>twitter</a>
+          <a href="#" class="bg-black mx-2 text-white d-flex align-items-center justify-content-center text-decoration-none rounded-circle"><i class="fa-brands fa-facebook-f"></i>facebook</a>
+          <a href="#" class="bg-black mx-2 text-white d-flex align-items-center justify-content-center text-decoration-none rounded-circle"><i class="fa-brands fa-linkedin-in"></i>linked in</a>
         </ul>
         <h5>Technical Skills</h5>
         <ul class="list-unstyled">
