--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
   <section class="py-5" id="contact">
     <div class="container-xxl py-5">
       <div class="col-12 d-flex flex-column text-center justify-content-center">
-        <h2 class="text-white">CONTACT ME</h2>
-        <h5 class="text-white fw-normal py-2 fst-italic">Interested if I'd be the right fit for your team? Fill in this form and I will respond within 24-48 hours.</h5>
+        <h2 class="text-black">CONTACT ME</h2>
+        <h5 class="text-secondary fw-normal py-2 fst-italic">Interested if I'd be the right fit for your team? Fill in this form and I will respond within 24-48 hours.</h5>
       </div>
       <div class="row pt-4 mt-5">
         <div class="col-12">
@@ -246,5 +246,18 @@
      </div>
    </section>
 
+   
+     <!-- Footer -->
+     <footer>
+        <div class="container-xxl flex-wrap pt-3 d-flex align-items-center justify-content-center justify-content-md-between">
+          <p>Copyright © 2024 Georgina Kabasa</p>
+          <ul class="social-icons d-flex">
+            <a href="#" class="bg-primary mx-2 text-white d-flex align-items-center justify-content-center text-decoration-none rounded-circle"><small><i class="fa-brands fa-twitter"></i></small></a>
+            <a href="#" class="bg-primary mx-2 text-white d-flex align-items-center justify-content-center text-decoration-none rounded-circle"><small><i class="fa-brands fa-facebook-f"></i></small></a>
+            <a href="#" class="bg-primary mx-2 text-white d-flex align-items-center justify-content-center text-decoration-none rounded-circle"><small><i class="fa-brands fa-linkedin-in"></i></small></a>
+          </ul>
+        </div>
+       </footer>
+  
 </body>
 </html>
