add about image 3.jpg

--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
     </div>
     <div class="row flex-row-reverse flex-md-row mt-5 pt-5">
       <div class="col-9 col-md-5 text-md-end">
-        <h5>1995-2008</h5>
-        <h5>Early Passion for Technology</h5>
-        <p>From an early age, I became fascinated with computers and programming. Starting with basic HTML and CSS, I gradually expanded my skills to include JavaScript and various frameworks.</p>
+        <h5>2015-2018</h5>
+        <h5>Early Interest Technology</h5>
+        <p>From my exposure to computers in school i became very interested in tachnology. Starting with attending coding camps in universities during school holidays I gradually expanded my skills to include python and various frameworks.</p>
       </div>
       <div class="col-3 col-md-2 img text-center">
         <img class="rounded-circle border border-5 border-dark-subtle img-fluid" src="about image 1.jpg" alt="img">
@@ -163,19 +163,19 @@
         <img class="rounded-circle border border-5 border-dark-subtle img-fluid" src="about image 2.jpg" alt="img">
       </div>
       <div class="col-9 col-md-5">
-        <h5>2008-2014</h5>
-        <h5>Higher Education and Career Growth</h5>
-        <p>During my university years, I studied computer science and gained hands-on experience through internships and freelance projects. This period fueled my passion for creating innovative solutions and solving complex problems.</p>
+        <h5>2019-2023</h5>
+        <h5>Higher Education </h5>
+        <p>During my high school years, I studied computer science and gained hands-on experience through freelance projects. This period fueled my passion for creating innovative solutions and solving complex problems and to expand my knowledge in technology with the changing times.</p>
       </div>
     </div>
     <div class="row flex-row-reverse flex-md-row mt-5 pt-5">
       <div class="col-9 col-md-5 text-md-end">
-        <h5>2014-Present</h5>
-        <h5>Professional Excellence and Continuous Learning</h5>
-        <p>Throughout my career, I have consistently sought opportunities to refine my skills and stay updated with the latest technologies. I strive for excellence in every project I undertake and aim to deliver valuable and impactful results.</p>
+        <h5>2024-Present</h5>
+        <h5> Continuous Learning</h5>
+        <p> I have consistently sought opportunities to refine my skills and stay updated with the latest technologies. I strive for excellence in every project I undertake and aim to deliver valuable and impactful results.</p>
       </div>
       <div class="col-3 col-md-2 img text-center">
-        <img class="rounded-circle border border-5 border-dark-subtle img-fluid" src="images/about-img-3.jpg" alt="img">
+        <img class="rounded-circle border border-5 border-dark-subtle img-fluid" src="about image 3.jpg" alt="img">
       </div>
     </div>
     <div class="row justify-content-md-end mt-5 pt-5">
