--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="row mt-5 mx-0 justify-content-center align-items-center">
         <div class="col-lg-3 px-md-3 px-0 col-md-4 col-12 card-wrapper">
           <div class="card mt-4">
-            <img src="images/ecommerce.png" class="img-fluid" alt="portfolio-img">
+            <img src="ecommerce-image.webp" class="img-fluid" alt="portfolio-img">
             <div class="card-body text-center">
               <h6 class="card-title">E-commerce Website</h6>
               <p class="card-text text-secondary">HTML/CSS/JavaScript</p>
