--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
         <div class="col-lg-3 px-md-3 px-0 col-md-4 card-wrapper">
           <div class="card mt-4">
-            <img src="images/landing-page.jpg" class="img-fluid" alt="portfolio-img">
+            <img src="landing page .jpg" class="img-fluid" alt="portfolio-img">
             <div class="card-body text-center">
               <h6 class="card-title">Responsive Landing Page</h6>
               <p class="card-text text-secondary">HTML/CSS/Bootstrap</p>
@@ -102,9 +102,9 @@
         </div>
         <div class="col-lg-3 px-md-3 px-0 col-md-4 card-wrapper">
           <div class="card mt-4">
-            <img src="images/calculator-app.jpg" class="img-fluid" alt="portfolio-img">
+            <img src="food app.jpg" class="img-fluid" alt="portfolio-img">
             <div class="card-body text-center">
-              <h6 class="card-title">Calculator App</h6>
+              <h6 class="card-title">Food App</h6>
               <p class="card-text text-secondary">HTML/CSS/JavaScript</p>
             </div>
           </div>
