--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
         <div class="col-lg-3 px-md-3 px-0 col-md-4 card-wrapper">
           <div class="card mt-4">
-            <img src="images/blog.jpg" class="img-fluid" alt="portfolio-img">
+            <img src="blog img.jpg" class="img-fluid" alt="portfolio-img">
             <div class="card-body text-center">
               <h6 class="card-title">Blog Website</h6>
               <p class="card-text text-secondary">HTML/CSS/PHP</p>
@@ -119,12 +119,7 @@
           </div>
         </div>
         <div class="col-lg-3 px-md-3 px-0 col-md-4 card-wrapper">
-          <div class="card mt-4">
-            <img src="images/react.jpg" class="img-fluid" alt="portfolio-img">
-            <div class="card-body text-center">
-              <h6 class="card-title">Task Management App</h6>
-              <p class="card-text text-secondary">ReactJS</p>
-            </div>
+          
           </div>
         </div>
         <div class="col-lg-3 px-md-3 px-0 col-md-4 card-wrapper">
