--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
    <!-- Header & Navbar -->
    <header class="bg-dark fixed-top">
-    <nav class="container-xxl navbar navbar-expand-lg py-3 bg-dark navbar-dark">
+    <nav class="container-xxl navbar navbar-expand-lg py-3 bg-info navbar-light">
       <div class="container-fluid">
         <a class="navbar-brand fw-bold fs-3" href="#">Georgina Kabasa</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +44,7 @@
 <section class="hero d-flex flex-column align-items-center justify-content-center">
     <div class="text-center">
       <h1 class="h1 text-white fw-medium fst-italic">Georgina Kabasa</h1>
-      <h2 class="display-3 text-white fw-bold">Information & Computer Systems <br /> student</h2>
+      <h2 class="display-3 text-black fw-bold">Information & Computer Systems <br /> student</h2>
       <a href="#skills" class="btn btn-lg fs-6 fw-medium mt-5 btn-primary p-3">TELL ME MORE</a>
     </div>
   </section>
